==> zhanzr/xmc4700-relax-kit-demo/lwip/src/port/nosys/netif/ethernetif.c <==
#include "lwip/opt.h"
#include "lwip/def.h"
#include "lwip/sys.h"
#include "lwip/mem.h"
#include "lwip/pbuf.h"
#include <lwip/netif.h>
#include <lwip/timeouts.h>
#include "netif/etharp.h"
#include "xmc_gpio.h"
#include "xmc_eth_mac.h"
#include "xmc_eth_phy.h"
#include <string.h>
#include "ethernetif.h"
#define IFNAME0 'e'
#define IFNAME1 'n'
#define ETH_LWIP_PHY_MAX_RETRIES  0xfffffU

static void ethernetif_link_callback(struct netif *netif)
{
  ETHIF_t *ethif = netif->state;
  XMC_ETH_PHY_CONFIG_t *phy = &ethif->phy;
  XMC_ETH_MAC_t *mac = &ethif->mac;

  XMC_ETH_LINK_SPEED_t speed;
  XMC_ETH_LINK_DUPLEX_t duplex;
  bool phy_autoneg_state;
  uint32_t retries = 0U;

  if (netif_is_link_up(netif))
  {
    /* If autonegotiation is enabled */
	  if (phy->enable_auto_negotiate)
	  {
      do
      {
        phy_autoneg_state = XMC_ETH_PHY_IsAutonegotiationCompleted(mac, ethif->phy_addr);
        retries++;
      } while ((phy_autoneg_state == false) && (retries < ETH_LWIP_PHY_MAX_RETRIES));
    
      if (phy_autoneg_state == false)
      {
        ethernetif_error(ETHIF_ERROR_PHY_TIMEOUT);
      }
	  }
  
    speed = XMC_ETH_PHY_GetLinkSpeed(mac, ethif->phy_addr);
    duplex = XMC_ETH_PHY_GetLinkDuplex(mac, ethif->phy_addr);
  
    XMC_ETH_MAC_SetLink(mac, speed, duplex);
    /* Enable ethernet interrupts */
    XMC_ETH_MAC_EnableEvent(mac, (uint32_t)XMC_ETH_MAC_EVENT_RECEIVE);

    NVIC_SetPriority(ETH0_0_IRQn, NVIC_EncodePriority(NVIC_GetPriorityGrouping(), 63U, 0U));
    NVIC_ClearPendingIRQ(ETH0_0_IRQn);
    NVIC_EnableIRQ(ETH0_0_IRQn);

    XMC_ETH_MAC_EnableTx(mac);
    XMC_ETH_MAC_EnableRx(mac);

    netif_set_up(netif);

#if LWIP_DHCP == 1
    /* Start DHCP query */
    dhcp_start(netif);
#elif LWIP_AUTOIP == 1
    /* Start AUTOIP probing */
    autoip_start(netif);
#endif

  }
  else
  {
    /* Enable ethernet interrupts */
    XMC_ETH_MAC_DisableEvent(mac, (uint32_t)XMC_ETH_MAC_EVENT_RECEIVE);
    NVIC_DisableIRQ(ETH0_0_IRQn);

    XMC_ETH_MAC_DisableTx(mac);
    XMC_ETH_MAC_DisableRx(mac);

    netif_set_down(netif);

#if LWIP_DHCP == 1
    /* Stop DHCP query */
    dhcp_stop(netif);
#elif LWIP_AUTOIP == 1
    /* Stop AUTOIP probing */
    autoip_stop(netif);
#endif

  }
}

static err_t low_level_output(struct netif *netif, struct pbuf *p)
{
  ETHIF_t *ethif = netif->state;
  XMC_ETH_MAC_t *mac = &ethif->mac;

  struct pbuf *q;
  uint32_t framelen = 0U;
  uint8_t *buffer;
  
  if (p->tot_len > (u16_t)XMC_ETH_MAC_BUF_SIZE) {
    return ERR_BUF;
  }

  if (XMC_ETH_MAC_IsTxDescriptorOwnedByDma(mac))
  {
    XMC_ETH_MAC_ResumeTx(mac);

    return ERR_BUF;
  }
  else
  {
    buffer = XMC_ETH_MAC_GetTxBuffer(mac);

#if ETH_PAD_SIZE
    pbuf_header(p, -ETH_PAD_SIZE);    /* Drop the padding word */
#endif

    for(q = p; q != NULL; q = q->next)
    {
      /* Send the data from the pbuf to the interface, one pbuf at a
       time. The size of the data in each pbuf is kept in the ->len
       variable. */
      MEMCPY(buffer, q->payload, q->len);
      framelen += (uint32_t)q->len;
      buffer += q->len;
    }

#if ETH_PAD_SIZE
    pbuf_header(p, ETH_PAD_SIZE);    /* Reclaim the padding word */
#endif

    XMC_ETH_MAC_SetTxBufferSize(mac, framelen);

    XMC_ETH_MAC_ReturnTxDescriptor(mac);
    XMC_ETH_MAC_ResumeTx(mac);

    LINK_STATS_INC(link.xmit);

    return ERR_OK;
  }

}

static struct pbuf * low_level_input(struct netif *netif)
{
  ETHIF_t *ethif = netif->state;
  XMC_ETH_MAC_t *mac = &ethif->mac;

  struct pbuf *p = NULL;
  struct pbuf *q;
  uint32_t len;
  uint8_t *buffer;

  if (XMC_ETH_MAC_IsRxDescriptorOwnedByDma(mac) == false)
  {
    len = XMC_ETH_MAC_GetRxFrameSize(mac);
  
    if ((len > 0U) && (len <= (uint32_t)XMC_ETH_MAC_BUF_SIZE))
    {
#if ETH_PAD_SIZE
    len += ETH_PAD_SIZE;    /* allow room for Ethernet padding */
#endif
  
      /* We allocate a pbuf chain of pbufs from the pool. */
      p = pbuf_alloc(PBUF_RAW, (u16_t)len, PBUF_POOL);
    
      if (p != NULL)
      {
#if ETH_PAD_SIZE
        pbuf_header(p, -ETH_PAD_SIZE);  /* drop the padding word */
#endif
  
        buffer = XMC_ETH_MAC_GetRxBuffer(mac);
  
        len = 0U;
        /* We iterate over the pbuf chain until we have read the entire
         * packet into the pbuf. */
        for (q = p; q != NULL; q = q->next)
        {
          /* Read enough bytes to fill this pbuf in the chain. The
           * available data in the pbuf is given by the q->len
           * variable.
           * This does not necessarily have to be a memcpy, you can also preallocate
           * pbufs for a DMA-enabled MAC and after receiving truncate it to the
           * actually received size. In this case, ensure the tot_len member of the
           * pbuf is the sum of the chained pbuf len members.
           */
           MEMCPY(q->payload, &buffer[len], q->len);
           len += q->len;
        }
#if ETH_PAD_SIZE
        pbuf_header(p, ETH_PAD_SIZE);    /* Reclaim the padding word */
#endif
        LINK_STATS_INC(link.recv);
        XMC_ETH_MAC_ReturnRxDescriptor(mac);
      }
    }
    else
    {
      /* Discard frame */
      XMC_ETH_MAC_ReturnRxDescriptor(mac);
      LINK_STATS_INC(link.memerr);
      LINK_STATS_INC(link.drop);    
    }
  }

  XMC_ETH_MAC_ResumeRx(mac);
  return p;  
}

void ethernetif_input(void *arg)
{
  struct pbuf *p = NULL;
  struct eth_hdr *ethhdr;
  struct netif *netif = (struct netif *)arg;

  NVIC_DisableIRQ(ETH0_0_IRQn);

  p = low_level_input(netif);

  while (p != NULL)
  {
 	  ethhdr = p->payload;
 	  switch (htons(ethhdr->type))
 	  {
 	    case ETHTYPE_IP:
 	    case ETHTYPE_ARP:
 	      /* full packet send to tcpip_thread to process */
        if (netif->input( p, netif) != ERR_OK)
        {
          pbuf_free(p);
        }

        break;

 	    default:
 	      pbuf_free(p);
 	      break;
 	  }

	  p = low_level_input(netif);
  }

  NVIC_ClearPendingIRQ(ETH0_0_IRQn);
  NVIC_EnableIRQ(ETH0_0_IRQn);
}
